--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,13 +3,14 @@ name: build
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build-package:
+    if: "!contains(github.event.pull_request.labels.*.name, 'docs-only')"
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -23,48 +24,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install cython --install-option='--no-cython-compile'
-      - name: Install
-        run: |
-          pip install -r requirements-dev.txt
-      - name: Lint with flake8
-        run: |
-          invoke lint
-      - name: Test import
-        run: |
-          python -m compas_occ
-      - name: Test with pytest
-        run: |
-          invoke test
 
-  build-docs:
-    needs: build-packages
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: compas-dev/compas-actions.build@v1.0.0
         with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install cython --install-option='--no-cython-compile'
-      - name: Install
-        run: |
-          pip install -r requirements-dev.txt
-      - name: Build docs with sphinx
-        run: |
-          rm -rf dist/docs && invoke docs
-      - name: Deploy docs
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v2
-        with:
-          target_branch: gh-pages
-          build_dir: dist/docs
-          keep_history: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          test_lint: true
+          test_compas: true
+
