--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,15 +13,33 @@ on:
 jobs:
   build:
     name: build and deploy docs
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - uses: actions/checkout@v2
 
-      - uses: compas-dev/compas-actions.docs@v1.0.1
+      - uses: conda-incubator/setup-miniconda@v2.0.0
+        with:
+          miniconda-version: "latest"
+          activate-environment: cgal
+          channels: conda-forge
+          python-version: 3.7
+
+      - name: build (windows)
+        run: |
+          conda install eigen boost-cpp mpir mpfr cgal-cpp">=5.0" pybind11 COMPAS">=0.16.0" -y
+          pip install -r requirements-dev.txt
+          invoke docs
+
+      - uses: compas-dev/compas-actions.docs@v1.0.2
         id: docs
         with:
           dest: deploy
           build_to_subfolder: true
+          install_dependencies: false
+          build_docs: false
 
       - name: Deploy docs
         if: success() && steps.docs.outputs.commit_type != 'pull'
