--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2.0.0
         with:
           miniconda-version: "latest"
-          activate-environment: cgal
+          activate-environment: occ
           channels: conda-forge
           python-version: 3.8
 
