--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,13 +23,13 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2.0.0
         with:
           miniconda-version: "latest"
-          activate-environment: cgal
+          activate-environment: occ
           channels: conda-forge
-          python-version: 3.7
+          python-version: 3.8
 
-      - name: build (windows)
+      - name: build
         run: |
-          conda install eigen boost-cpp mpir mpfr cgal-cpp">=5.0" pybind11 COMPAS">=0.16.0" -y
+          conda install compas pythonocc-core -y
           pip install -r requirements-dev.txt
           invoke docs
 
