--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,9 @@ ignore = D001
 convention = numpy
 
 [tool:pytest]
-testpaths = tests
+testpaths =
+    tests
+    src/compas_occ
 norecursedirs =
     migrations
 python_files =
@@ -22,16 +24,20 @@ python_files =
     tests.py
 addopts =
     -ra
-    --strict
-    --doctest-modules
+    --strict-markers
     --doctest-glob=\*.rst
     --tb=short
+doctest_optionflags =
+    NORMALIZE_WHITESPACE
+    IGNORE_EXCEPTION_DETAIL
+    ALLOW_UNICODE
+    ALLOW_BYTES
+    NUMBER
 
 [isort]
 force_single_line = True
 line_length = 180
-known_first_party = compas
+known_first_party = compas_occ
 default_section = THIRDPARTY
-forced_separate = test_compas
-not_skip = __init__.py
-skip = migrations
+forced_separate = test_compas_occ
+skip = migrations, __init__.py
