--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ name: Create Release
 
 jobs:
   Build:
-    runs-on: ${{ '{{' }} matrix.os {{ '}}' }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ '{{' }} matrix.python-version {{ '}}' }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ '{{' }} matrix.python-version {{ '}}' }}
+          python-version: ${{ matrix.python-version }}
 
       - uses: compas-dev/compas-actions.build@v1.0.0
         with:
@@ -43,18 +43,18 @@ jobs:
         id: changelog_reader
         uses: mindsers/changelog-reader-action@v2
         with:
-          version: ${{ '{{' }} steps.tag_name.outputs.current_version {{ '}}' }}
+          version: ${{ steps.tag_name.outputs.current_version }}
           path: ./CHANGELOG.md
     
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ '{{' }} secrets.GITHUB_TOKEN {{ '}}' }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ '{{' }} github.ref {{ '}}' }}
-          release_name: Release ${{ '{{' }} github.ref {{ '}}' }}
-          body: ${{ '{{' }} steps.changelog_reader.outputs.changes {{ '}}' }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: ${{ steps.changelog_reader.outputs.changes }}
           draft: false
           prerelease: false
 
@@ -68,4 +68,4 @@ jobs:
         python-version: '3.x'
     - uses: compas-dev/compas-actions.publish@v1.0.0
       with:
-        token: ${{ '{{' }} secrets.PYPI {{ '}}' }}
+        token: ${{ secrets.PYPI }}
