--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,6 +17,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: conda-incubator/setup-miniconda@v2.0.0
+        with:
+          miniconda-version: "latest"
+          activate-environment: occ
+          channels: conda-forge
+
+      - name: build
+        run: |
+          conda install compas pythonocc-core -y
+          pip install -r requirements-dev.txt
+
       - uses: compas-dev/compas-actions.docs@v1.2.1
         id: docs
         with:
