--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,10 @@ on:
 jobs:
   build:
     name: build and deploy docs
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - uses: actions/checkout@v2
 
@@ -22,17 +25,21 @@ jobs:
           miniconda-version: "latest"
           activate-environment: occ
           channels: conda-forge
+          python-version: 3.7
 
       - name: build
         run: |
           conda install compas pythonocc-core -y
           pip install -r requirements-dev.txt
+          invoke docs
 
       - uses: compas-dev/compas-actions.docs@v1.2.1
         id: docs
         with:
           dest: deploy
           build_to_subfolder: true
+          install_dependencies: false
+          build_docs: false
 
       - name: Deploy docs
         if: success() && steps.docs.outputs.commit_type != 'pull'
