--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,13 +10,14 @@ invoke >=0.14
 ipykernel
 ipython >=5.8
 isort
+jinja2
 m2r
 nbsphinx
 pydocstyle
 pytest >=3.2
+requests >=2.24
 sphinx_compas_theme >=0.15.18
-sphinx ==4.5
-jinja2 >= 3.0
+sphinx
 twine
 wheel
 -e .
