--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,38 +8,19 @@ on:
     branches:
       - main
 
-defaults:
-  run:
-    shell: bash -l {0}
-
-
 jobs:
-  build-packages:
+  Build:
+    if: "!contains(github.event.pull_request.labels.*.name, 'docs-only')"
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        python: ['3.8', '3.9', '3.10']
 
     steps:
-
-      - uses: actions/checkout@v2
-
-      - uses: conda-incubator/setup-miniconda@v2.0.0
+      - uses: compas-dev/compas-actions.build@v2
         with:
-          miniconda-version: "latest"
-          activate-environment: occ
-          channels: conda-forge
-
-      - name: build
-        run: |
-          conda install compas pythonocc-core -y
-          pip install -r requirements-dev.txt
-  
-      - name: Lint with flake8
-        run: |
-          invoke lint
-
-      - name: Test with pytest
-        run: |
-          invoke test
+          test_lint: true
+          test_compas: true
+          use_conda: true
+          python: ${{ matrix.python }}
