--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,6 +19,13 @@ pyflakes >=1.4.0
 sphinx_book_theme
 sphinx_compas_theme >=0.15.18
 sphinx ==4.5
+sphinx-design
+sphinx-inline-tabs
+sphinx-togglebutton
+sphinx-remove-toctrees
+sphinx-copybutton
+sphinxcontrib-bibtex
+sphinxcontrib-youtube
 twine
 wheel
 -e .
