--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,9 @@ end_of_line = crlf
 [*.md]
 trim_trailing_whitespace = false
 
+[*.yml]
+indent_size = 2
+
 [Makefile]
 indent_style = tab
 indent_size = 4
