--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -18,5 +18,6 @@ exclude pytest.ini .bumpversion.cfg .editorconfig
 exclude tasks.py
 exclude conftest.py
 exclude CONTRIBUTING.md
+exclude environment.yml
 
 global-exclude *.py[cod] __pycache__ *.dylib *.nb[ic] .DS_Store
