--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        python: ['3.8', '3.9', '3.10']
+        python: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: compas-dev/compas-actions.build@v3
