--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 name: Create Release
 
@@ -11,13 +11,13 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
-        python: ['3.8', '3.9', '3.10']
+        python: ["3.9", "3.10", "3.11"]
 
     steps:
-      - uses: compas-dev/compas-actions.build@v2
+      - uses: compas-dev/compas-actions.build@v4
         with:
-          test_lint: true
-          test_compas: true
+          invoke_lint: true
+          invoke_test: true
           use_conda: true
           python: ${{ matrix.python }}
 
@@ -25,7 +25,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: compas-dev/compas-actions.publish@v2
+      - uses: compas-dev/compas-actions.publish@v3
         with:
           pypi_token: ${{ secrets.PYPI }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
