--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,8 @@ ENV/
 # COMPAS OCC
 # ==============================================================================
 
+*.tar.gz
+
 *.3dmbak
 *.rhl
 *.rui_bak
