--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: occ
 channels:
   - conda-forge
 dependencies:
-  - pythonocc-core < 7.8
+  - pythonocc-core
   - pip:
       - -r requirements.txt
       - -r requirements-dev.txt
