--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ authors = [
 license = { file = "LICENSE" }
 readme = "README.md"
 requires-python = ">=3.9"
-dynamic = ["dependencies", "optional-dependencies", "version"]
+dynamic = ["version"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Topic :: Scientific/Engineering",
@@ -28,6 +28,37 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
+dependencies = ["compas"]
+
+[project.optional-dependencies]
+dev = [
+    "build",
+    "bump-my-version",
+    "compas_invocations2",
+    "invoke >=0.14",
+    "pytest",
+    "ruff",
+    "twine",
+    "wheel",
+]
+docs = [
+    "markdown-callouts >=0.4",
+    "markdown-exec >=1.8",
+    "mike",
+    "mkdocs >=1.6",
+    "mkdocs-autorefs >=1.4",
+    "mkdocs-coverage >=1.0",
+    "mkdocs-git-revision-date-localized-plugin >=1.2",
+    "mkdocs-llmstxt >=0.2",
+    "mkdocs-material >=9.5",
+    "mkdocs-minify-plugin >=0.8",
+    "mkdocs-redirects >=1.2",
+    "mkdocs-section-index >=0.3",
+    "mkdocstrings[python]",
+    "pydantic >=2.10",
+    "tomli >=2.0; python_version < '3.11'",
+]
+viz = ["compas_viewer"]
 
 [project.urls]
 Homepage = "https://compas-dev.github.io/compas_occ"
@@ -92,9 +123,6 @@ replace = "[{new_version}] {now:%Y-%m-%d}"
 # ============================================================================
 # replace setup.cfg
 # ============================================================================
-
-[tool.black]
-line-length = 179
 
 [tool.ruff]
 line-length = 179
