--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,23 +41,7 @@ dev = [
     "twine",
     "wheel",
 ]
-docs = [
-    "markdown-callouts >=0.4",
-    "markdown-exec >=1.8",
-    "mike",
-    "mkdocs >=1.6",
-    "mkdocs-autorefs >=1.4",
-    "mkdocs-coverage >=1.0",
-    "mkdocs-git-revision-date-localized-plugin >=1.2",
-    "mkdocs-llmstxt >=0.2",
-    "mkdocs-material >=9.5",
-    "mkdocs-minify-plugin >=0.8",
-    "mkdocs-redirects >=1.2",
-    "mkdocs-section-index >=0.3",
-    "mkdocstrings[python]",
-    "pydantic >=2.10",
-    "tomli >=2.0; python_version < '3.11'",
-]
+docs = ["sphinx_compas2_theme"]
 viz = ["compas_viewer"]
 
 [project.urls]
