update repo name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: COMPAS Model
+site_name: COMPAS OCC
 site_url: https://github.com/compas-dev/compas_occ/
 
 repo_name: compas-dev/compas_occ
